bk_ida/gccida/c3/reload_cse_move2add
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9635:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pat = ( rtx)first[2]; 
            ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9642:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
src = ( rtx)pat[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9652:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9652:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9653:22: error: use of undeclared identifier 'reg_offset_0'; did you mean 'reg_offset'?
src->fld[0].rtwint - reg_offset_0[regno]); 
                     ^~~~~~~~~~~~
                     reg_offset
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9092:22: note: 'reg_offset' declared here
static HOST_WIDE_INT reg_offset[FIRST_PSEUDO_REGISTER];
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9673:1: error: use of undeclared identifier 'reg_offset_0'; did you mean 'reg_offset'?
reg_offset_0[regno] = src->fld[0].rtwint; 
^~~~~~~~~~~~
reg_offset
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9092:22: note: 'reg_offset' declared here
static HOST_WIDE_INT reg_offset[FIRST_PSEUDO_REGISTER];
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9685:13: error: expected identifier or '('
 struct set = 0LL; 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9691:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( rtx)next[2]; 
           ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9700:13: error: expected identifier or '('
 struct set = v6; 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9702:7: error: expected expression
if (  struct set 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9710:15: error: use of undeclared identifier 'reg_offset_0'; did you mean 'reg_offset'?
base_offset = reg_offset_0[src->fld[0].rtuint]; 
              ^~~~~~~~~~~~
              reg_offset
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9092:22: note: 'reg_offset' declared here
static HOST_WIDE_INT reg_offset[FIRST_PSEUDO_REGISTER];
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9712:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9712:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9713:30: error: use of undeclared identifier 'reg_offset_0'; did you mean 'reg_offset'?
base_offset + added_offset - reg_offset_0[regno]); 
                             ^~~~~~~~~~~~
                             reg_offset
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9092:22: note: 'reg_offset' declared here
static HOST_WIDE_INT reg_offset[FIRST_PSEUDO_REGISTER];
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9733:1: error: use of undeclared identifier 'reg_offset_0'; did you mean 'reg_offset'?
reg_offset_0[regno] = sext_for_mode( 
^~~~~~~~~~~~
reg_offset
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9092:22: note: 'reg_offset' declared here
static HOST_WIDE_INT reg_offset[FIRST_PSEUDO_REGISTER];
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9734:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9734:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/reload1.c:9740:54: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note = first[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
                                                     ^~~~~~~
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_cse_move2add/src/obj/reload1.o] Error 1
